style.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
@import url('https://fonts.googleapis.com/css?family=Press+Start+2P');

:root {
  --primary-bg-color: rgba(240, 242, 246);
  --primary-font: Open Sans, sans-serif;
  --normal-font-size: 1rem;
  --header-height: 2em;
  --nav-width: 250px;
  --nav-icon-width: 50px;
  --z-fixed: 100;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  font-family: var(--primary-font);
  margin: var(--header-height) 0 0 0; 
  padding: 0;
  background-color: white;
}

/* Header navigation bar */
header {
  position: fixed; 
  top: 0; 
  left: 0;
  width: 100%; 
  height: var(--header-height);
  background: white;
  z-index: var(--z-fixed);
  padding: 0 3em 0 calc(var(--nav-width) + 3em);
  transition: 0.5s;
}

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: var(--header-height);
}

nav .controls {
  display: flex;
  align-items: center;
  gap: 1rem;
}

nav a {
  text-decoration: none;
}

nav .help {
  color: rgba(0, 0, 0, 0.5);
  cursor: pointer;
}

nav .help:hover,
nav .help.active {
  color: rgba(0, 0, 0, 0.75);
}

nav .trigger {
  display: flex;
  align-items: center;
  border: none;
  outline:none;
  background: none;
  font-size: 1.25em;
}

.glow {
  position: relative;
  box-shadow: 0 0 8px 8px rgba(255, 255, 0, 0.5);
  border-radius: 30%;
}

#help-message {
  margin-left: 5px;
  font-size: 1rem;
  color: rgba(0, 0, 0, 0.75)
}

nav .sidebar-toggle {
  font-size: 1.25em;
  color:  rgba(0, 0, 0, 0.5);
  cursor: pointer;
}

nav .sidebar-toggle:hover {
  color: rgba(0, 0, 0, 0.75)
}

/* Instruction Modal */
.modal {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 0;
  visibility: hidden;
  transform: scale(1.1);
  z-index: calc(var(--z-fixed) + 1);
  transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
}

.modal-content {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: white;
  padding: 1rem 1.5rem;
  width: 50%;
  max-height: 75vh; 
  overflow-y: auto;
  border-radius: 0.5rem;
  word-spacing: 0.3rem;
}

.modal-content .logo {
  font-family: 'Press Start 2P', monospace;
  font-size: .8rem;
  font-weight: bold;
  color: rgba(0, 0, 0, 0.75);
}

kbd {
  border: 1px solid; 
  box-shadow: 2px 2px; 
  font-size: 1.2em; 
  line-height: .8em; 
  display: inline-block;
  font-weight: 600;
  letter-spacing: .1em; 
  padding: 3px 5px;
  white-space: nowrap;
}

.close-button {
  float: right;
  width: 1.5rem;
  height: 1.5rem;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  border-radius: 0.5rem;
  background-color: rgb(238, 238, 238);
}

.close-button i {
  font-size: 1.25rem;
}

.close-button:hover {
  background-color: darkgray;
}

.show-modal {
  opacity: 1;
  visibility: visible;
  transform: scale(1.0);
  transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
}

/* Sidebar menu */
.sidebar {
  position: fixed;
  top: 0;
  width: var(--nav-width);
  height: 100vh;
  background-color: var(--primary-bg-color);
  z-index: 100;
  overflow: scroll;
  transition: 0.5s;
}

.sidebar .header {
  margin-bottom: 2.5rem;
  height: var(--header-height);
  font-size: 1.25rem;
  font-weight: bold;
  color: rgba(0, 0, 0, 0.75);

}

.sidebar .header .logo {
  font-family: 'Press Start 2P', monospace;
  font-size: 1em;
  font-weight: bold;
  color: rgba(0, 0, 0, 0.75);
  padding-left: 52px;
  padding-right: 52px;
  white-space: nowrap;
}

.sidebar .accordion {
  width:100%;
  display: flex;
  align-items: center;
  border: none;
  outline:none;
  background: none;
  color: rgba(0, 0, 0, 0.75);
  cursor: pointer;
  font-size: 1.25rem;
  font-weight: bold;
  margin-bottom: 0.5em;
  padding: 0;
  white-space: nowrap
}

.sidebar .accordion:hover {
  background-color: #dddddd;
}

.sidebar .accordion-content {
  padding: 0 20px;
  max-height: 0;
  overflow: hidden;
  gap: 0.5em;
  transition: max-height 0.2s ease-in-out;
}

.sidebar .accordion-content label {
  font-size: .8rem;
}

.sidebar .accordion-content select {
  width: 100%;
  height: 2em;
}
.sidebar .accordion-content input[type="range"] {
  width: 100%;
}

.sidebar .color{
  display: flex;
  justify-content: space-between;

}
.sidebar .accordion-option {
  padding-bottom: 10px;
}

.sidebar .accordion-option .output {
  float: right;
  font-size: .75rem;
  font-family: monospace;
  color: #963c10;
}

.sidebar .icon {
  width: var(--nav-icon-width);
  height: var(--nav-icon-width);
  display: flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  font-size: 1.75rem;
}

.legend {
  padding-top: .2em;
}

#url-json-file {
  width: 100%;
  height: 2em;
}

.sidebar--collapsed {
  width: var(--nav-icon-width);
  overflow-x: hidden;
}

.body-pad {
  padding: 0 3em 0 calc(var(--nav-icon-width) + 3em) !important;
}

.download-toggle {
  width: 100%;
  height: 1.5em;
  position: relative;
  background: white;
  border: 1px solid rgba(0, 0, 0, 0.75);
  border-radius: 25px;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  overflow: hidden;
}

.download-toggle button {
  text-align: center;
  line-height: 50px;
  color: black;
  flex: 1;
  margin: 0;
  border: none;
  background: white;
  border-radius: 25px 0 0 25px;
}

.download-toggle .upload-method {
  color: white;
  background: #007bff;
}

.download-toggle button:last-child {
  border-radius: 0 25px 25px 0;
}

.main {
  margin-top: 3em;
  padding: 0 3em 0 calc(var(--nav-width) + 3em);
  transition: 0.5s;
}

@media (min-width: 1400px) {
  .body-pad {
    padding: 0 6em 0 calc(var(--nav-icon-width) + 6em) !important;
  }
  .main {
    padding: 0 6em 0 calc(var(--nav-width) + 6em);
  }
}

.chart {  
  max-width: 1080px; 
  min-width: 750px;
}

.protein {
  max-width: 1080px; 
  min-width: 750px;
  min-height: 300px;
  max-height: 600px;
}


@media (max-width: 500px) {
  .chart {  
    min-width: 300px;
  }
  
  .protein {
    min-width: 300px;
  }
  
}

.heatmap-tooltip,
.focus-tooltip {
  padding: 8px 12px;
  color: black;
  border-radius: 6px;
  border: 2px solid rgba(255,255,255,0.5);
  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.2);
  pointer-events: none;
  transform: translate(-50%, -100%);
  font-family: "Helvetica", sans-serif;
  background: rgba(20,10,30,0.6);
  transition: 0.2s opacity ease-out, 0.1s border-color ease-out;
  backdrop-filter: blur(4px);
  background: rgba(250,240,255,0.2);
  backdrop-filter: blur(7px);
  z-index: var(--z-fixed);
}

.heatmap-tooltip {
  transform: translate(-50%, 25%) !important;
}

.protein-tooltip {
  display: none;
  position: absolute;
  padding: 8px 12px;
  color: black;
  border-radius: 6px;
  border: 2px solid rgba(255,255,255,0.5);
  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.2);
  pointer-events: none;
  transform: translate(-50%, -100%);
  font-family: "Helvetica", sans-serif;
  background: rgba(20,10,30,0.6);
  transition: 0.2s opacity ease-out, 0.1s border-color ease-out;
  backdrop-filter: blur(4px);
  background: rgba(250,240,255,0.2);
  backdrop-filter: blur(7px);
  z-index: var(--z-fixed);
}


.axis {
  -webkit-user-select: none;  
  -moz-user-select: none;    
  -ms-user-select: none;      
  user-select: none;
  font-size: .9rem;
}

.heatmap .y-axis  text{
  font-size: .8rem;
  text-anchor: middle;
  transform: translate(-0.4em, 0em);
}

.axis-label {
  font-size: 1.2rem;
  font-weight: bold;
}

